experimental/ir/testdata/fields/empty_oneof.proto.stderr.txt
error: oneof must define at least one member
  --> testdata/fields/empty_oneof.proto:21:5
   |
21 |     oneof empty {}
   |     ^^^^^^^^^^^^^^

encountered 1 error
